# controllers/authControllers.js
@@ -4,42 +4,6 @@ const bcryt = require('bcrypt');
 const jwt = require('jsonwebtoken');
 const { JWT_PRIVATE_KEY } = process.env;
 
-async function register(req, res, next) {
-    try {
-        let { name, email, password } = req.body;
-        if (!name || !email || !password) {
-            return res.status(400).json({
-                status: false,
-                message: 'Bad Request',
-                error: 'name, email and password are required!',
-                data: null
-            });
-        }
-
-        let existUser = await prisma.User.findFirst({ where: { email } });
-        if (existUser) {
-            return res.status(400).json({
-                status: false,
-                message: 'Bad Request',
-                error: 'email is already used!',
-                data: null
-            });
-        }
-
-        let encryptedPassword = await bcryt.hash(password, 10);
-        let user = await prisma.User.create({ data: { name, email, password: encryptedPassword } });
-        delete user.password; // excluede password from user
-        res.json({
-            status: true,
-            message: 'OK',
-            error: null,
-            data: { user }
-        });
-    } catch (err) {
-        next(err);
-    }
-}
-
 async function login(req, res, next) {
     try {
         let { email, password } = req.body;
@@ -97,7 +61,6 @@ async function whoami(req, res) {
 }
 
 module.exports = {
-    register,
     login,
     whoami
 };
