# swagger.yaml
@@ -9,42 +9,6 @@ servers:
 security:
   - bearerAuth: []
 paths:
-  /auth/register:
-    post:
-      tags:
-        - "Auth"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  example: aryo
-                email:
-                  type: string
-                  example: aryo@mail.com
-                password:
-                  type: string
-                  example: aryo123
-              required:
-                - name
-                - email
-                - password
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - $ref: "#/components/schemas/BasicResponse"
-                  - type: object
-                    properties:
-                      data:
-                        type: object
   /auth/login:
     post:
       tags:
@@ -83,6 +47,98 @@ paths:
         - "Auth"
       security:
         - bearerAuth: []
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/BasicResponse"
+                  - type: object
+                    properties:
+                      data:
+                        type: object
+  /users:
+    post:
+      tags:
+        - "User"
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: Naura Test
+                email:
+                  type: string
+                  example: naura@test.com
+                role:
+                  type: string
+                  example: student
+                  description: admin, lecturer, student
+                gender:
+                  type: string
+                  example: female
+                  description: male, female
+                password:
+                  type: string
+                  example: password
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/BasicResponse"
+                  - type: object
+                    properties:
+                      data:
+                        type: object
+    get:
+      tags:
+        - "User"
+      parameters:
+        - schema:
+            type: string
+          in: query
+          name: search
+          required: false
+        - schema:
+            type: string
+          in: query
+          name: role
+          description: admin, lecturer, student
+          required: false
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/BasicResponse"
+                  - type: object
+                    properties:
+                      data:
+                        type: object
+  /users/{id}:
+    get:
+      tags:
+        - "User"
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            minimum: 1
       responses:
         200:
           description: OK
